--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 HEllo
 <h1>hello</h1>
 <p>hello</p>
-<DOCTYPE html>
+<!DOCTYPE html>
 >html>
    <head>
    </head>
-<body>
+    <body>
+       <h1>hello!</h1>
