--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@ HEllo
     <body>
        <h1>hello!</h1>
        </head>
-<a  href="https://gallery.html">click me!</a>
+<a  href="https:/gallery.html">click me!</a>
